--- a/GTownRadio/Base.lproj/Main.storyboard
+++ b/GTownRadio/Base.lproj/Main.storyboard
@@ -116,10 +116,10 @@
             </objects>
             <point key="canvasLocation" x="2348" y="349"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Light Nav Controller-->
         <scene sceneID="lkt-5H-qg7">
             <objects>
-                <navigationController id="Ic5-XP-MKF" sceneMemberID="viewController">
+                <navigationController id="Ic5-XP-MKF" customClass="LightNavController" customModule="gtownradio" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="Ag7-Fp-jfQ">
                         <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
