--- a/GTownRadio/Base.lproj/Main.storyboard
+++ b/GTownRadio/Base.lproj/Main.storyboard
@@ -38,7 +38,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.93945127139412266" green="1" blue="0.91750150716196632" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="PQr-Ze-W5v" firstAttribute="trailing" secondItem="rvf-Cg-fg0" secondAttribute="trailing" constant="16" id="1vS-7M-HJe"/>
                             <constraint firstItem="rvf-Cg-fg0" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" constant="16" id="5Zs-JF-qnb"/>
@@ -48,15 +48,33 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
                     </view>
+                    <toolbarItems>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="cMJ-6G-U9c"/>
+                        <barButtonItem width="280" style="plain" id="qTH-rt-6tQ">
+                            <view key="customView" contentMode="center" id="ZAq-EK-4QL" customClass="MPVolumeView">
+                                <rect key="frame" x="16" y="12" width="288" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.34509803919999998" green="0.72941176470000002" blue="0.2784313725" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                            <color key="tintColor" red="0.34509803919999998" green="0.72941176470000002" blue="0.2784313725" alpha="1" colorSpace="calibratedRGB"/>
+                        </barButtonItem>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="2tq-qV-fE5"/>
+                    </toolbarItems>
                     <navigationItem key="navigationItem" title="G-Town Radio" id="ThN-ES-puJ">
                         <barButtonItem key="rightBarButtonItem" title="Item" image="gearicon" id="VQc-vl-QP4">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </barButtonItem>
                     </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
+                <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="b6C-Mm-e9P">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                    <items/>
+                </toolbar>
             </objects>
-            <point key="canvasLocation" x="1536" y="349"/>
+            <point key="canvasLocation" x="1535.625" y="348.59154929577466"/>
         </scene>
         <!--Now Playing View Controller-->
         <scene sceneID="j72-hN-i31">
@@ -119,7 +137,7 @@
         <!--Light Nav Controller-->
         <scene sceneID="lkt-5H-qg7">
             <objects>
-                <navigationController id="Ic5-XP-MKF" customClass="LightNavController" customModule="gtownradio" customModuleProvider="target" sceneMemberID="viewController">
+                <navigationController toolbarHidden="NO" id="Ic5-XP-MKF" customClass="LightNavController" customModule="gtownradio" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="Ag7-Fp-jfQ">
                         <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -129,6 +147,11 @@
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </textAttributes>
                     </navigationBar>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="pIb-Ch-ELd">
+                        <rect key="frame" x="0.0" y="524" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.34509803919999998" green="0.72941176470000002" blue="0.2784313725" alpha="1" colorSpace="calibratedRGB"/>
+                    </toolbar>
                     <connections>
                         <segue destination="9pv-A4-QxB" kind="relationship" relationship="rootViewController" id="alU-9A-Lan"/>
                     </connections>
