--- a/GTownRadio/Base.lproj/Main.storyboard
+++ b/GTownRadio/Base.lproj/Main.storyboard
@@ -55,6 +55,7 @@
                                 <rect key="frame" x="16" y="12" width="288" height="20"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.34509803919999998" green="0.72941176470000002" blue="0.2784313725" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="tintColor" white="0.5" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <color key="tintColor" red="0.34509803919999998" green="0.72941176470000002" blue="0.2784313725" alpha="1" colorSpace="calibratedRGB"/>
                         </barButtonItem>
@@ -111,7 +112,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.95178531704919955" green="0.97237777307145079" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="W4c-fM-Foa" firstAttribute="trailing" secondItem="NJs-jo-b0a" secondAttribute="trailing" constant="16" id="100-19-bLa"/>
                             <constraint firstItem="aPN-D7-dTw" firstAttribute="centerX" secondItem="CY1-Dp-oyE" secondAttribute="centerX" id="25o-63-iRm"/>
